--- a/Trunk/WpfApplication1/Guis/BusinessProcesses/Sales/Orders/OrdersView.xaml
+++ b/Trunk/WpfApplication1/Guis/BusinessProcesses/Sales/Orders/OrdersView.xaml
@@ -7,6 +7,9 @@
   HorizontalAlignment="Center"
   VerticalAlignment="Center"  
   Width="609" mc:Ignorable="d" d:DesignHeight="504" Height="463">
+    <UserControl.Resources>
+        <CollectionViewSource x:Key="AllPositions" Source="{Binding Positions}"/>
+    </UserControl.Resources>
     <Grid Margin="4">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -104,12 +107,13 @@
             MinHeight="125"
             Margin="0,10,0,10"
             AlternationCount="2"
+            DataContext="{StaticResource AllPositions}"
             ItemsSource="{Binding}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Product"/>
-                    <GridViewColumn Header="Amount" />
-                    <GridViewColumn Header="Price"/>
+                    <GridViewColumn Header="Product" DisplayMemberBinding="{Binding Path=Product}" />
+                    <GridViewColumn Header="Amount" DisplayMemberBinding="{Binding Path=Amount}" />
+                    <GridViewColumn Header="Price" DisplayMemberBinding="{Binding Path=Price}" />
                 </GridView>
             </ListView.View>
         </ListView>
