--- a/Trunk/WpfApplication1/Guis/BusinessProcesses/Purchase/AllPurchaseHeaderView.xaml
+++ b/Trunk/WpfApplication1/Guis/BusinessProcesses/Purchase/AllPurchaseHeaderView.xaml
@@ -1,17 +1,19 @@
-﻿<UserControl x:Class="WpfApplication1.Guis.BusinessProcesses.Distribution.AllDistributionView"
+﻿<UserControl x:Class="WpfApplication1.Guis.BusinessProcesses.Purchase.AllPurchaseHeaderView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d">
+             mc:Ignorable="d" 
+             d:DesignWidth="300">
+    
 <UserControl.Resources>
-        <CollectionViewSource x:Key="DistributionGroups"  Source="{Binding Path=AllDistribution}" >
+        <CollectionViewSource x:Key="PurchaseHeaderGroups"  Source="{Binding Path=AllPurchaseHeader}" >
             <CollectionViewSource.GroupDescriptions>
-                <PropertyGroupDescription PropertyName="IsDistribution" />
+                <PropertyGroupDescription PropertyName="IsPurchaseHeader" />
             </CollectionViewSource.GroupDescriptions>
         </CollectionViewSource>
 
-        <Style x:Key="DistributionItemStyle" TargetType="{x:Type ListViewItem}">
+        <Style x:Key="PurchaseHeaderItemStyle" TargetType="{x:Type ListViewItem}">
             <!-- 
       Stretch the content of each cell so that we can 
       right-align text in the Total Sales column. 
@@ -42,18 +44,18 @@
     <DockPanel>
         <Grid DockPanel.Dock="Bottom" Margin="0,2,4,2">
             <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" VerticalAlignment="Center">
-                <TextBlock Text="Total selected distributions: " />
-                <ContentPresenter  Content="{Binding Path=TotalSelectedDistributions}" ContentStringFormat="c"  />
+                <TextBlock Text="Total selected purchase headers: " />
+                <ContentPresenter  Content="{Binding Path=TotalSelectedPurchaseHeaders}" ContentStringFormat="c"  />
             </StackPanel>
         </Grid>
 
-        <ListView  AlternationCount="2"   DataContext="{StaticResource DistributionGroups}"   ItemContainerStyle="{StaticResource DistributionItemStyle}"   ItemsSource="{Binding}">
+        <ListView  AlternationCount="2"   DataContext="{StaticResource PurchaseHeaderGroups}"   ItemContainerStyle="{StaticResource PurchaseHeaderItemStyle}"   ItemsSource="{Binding}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Number"  DisplayMemberBinding="{Binding Path=DistributionNumber}"  />
-                    <GridViewColumn Header="Customer" DisplayMemberBinding="{Binding Path=DistributionCustomer}" />
-                    <GridViewColumn Header="create date" DisplayMemberBinding="{Binding Path=DistributionCreateDate}" />
-                    <GridViewColumn Header="Distribution Type" DisplayMemberBinding="{Binding Path=DistributionType}" />
+                    <GridViewColumn Header="Number"  DisplayMemberBinding="{Binding Path=PurchaseHeaderNumber}"  />
+                    <GridViewColumn Header="Customer" DisplayMemberBinding="{Binding Path=PurchaseHeaderCustomer}" />
+                    <GridViewColumn Header="create date" DisplayMemberBinding="{Binding Path=PurchaseHeaderCreateDate}" />
+                    <GridViewColumn Header="PurchaseHeader Type" DisplayMemberBinding="{Binding Path=PurchaseHeaderType}" />
                     <GridViewColumn Header="Total Positions">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
@@ -66,4 +68,3 @@
         </ListView>
     </DockPanel>
 </UserControl>
-
